--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -42,7 +42,7 @@
             <div class="templates display">
                 {% for post in posts %}
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card" style="height: auto;width: auto;">
                         <div class="view overlay">
                             <div class="box-content over mi" style="background-color: black;" >
                                 <a href="{% url 'project' random_post.title %}" class="site-link" aria-label=""></a>
