--- a/projects/templates/profile.html
+++ b/projects/templates/profile.html
@@ -31,7 +31,15 @@
         <div class="col-md-6 mt-4">
             <div class="card" style="border-radius: 70%;">
             <img class="rounded-circle account-img d-block mx-auto" style="margin-top: 3%;" src="{{ user.profile.profile_picture.url }}">
-            <p class="text-center mt-3">{{user.username}}</p>
-            <p class="text-center mt-3" style="color: yellowgreen;"><strong>{{user.profile.bio}}</strong></p>
+            <p class="text-center mt-3" style="font-size: 20px;">{{user.username}}</p>
+            <p class="text-center" style="color: yellowgreen;"><strong>{{user.profile.bio}}</strong></p>
             <p class="text-center"> {{user.email}}</p>
-            
+            </div>
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+
+</div>
+
+
+{% endblock %}
