--- a/projects/templates/navbar.html
+++ b/projects/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load crispy_forms_tags %}
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" id="nbar">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'index' %}"> <strong class="mr-4 brand"> Awwards</strong></a>
+        <a class="navbar-brand" style="font-size: 40px;" href="{% url 'index' %}"> <strong class="mr-4 brand" style="font-family: 'Berkshire Swash'"> Project-rating</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
