--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -17,7 +17,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
-    <title>Awwards</title>
+    <title>Project-rating</title>
      {{ form.media }}
 </head>
 <body>
