--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="container-fluid" style="margin-top:5%;"><br>
     <div class="container">
-        <h2 class="mt-4">Websites available</h2>
+        <h2 class="mt-4 text-center" style="font-size: 30px;">Website projects</h2>
         {% if user.is_authenticated %}
         <div class="modal fade bd-example-modal-xl" id="ModalCenter" tabindex="-1" role="dialog"
              aria-labelledby="exampleModalCenterTitle"
