--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -49,14 +49,14 @@
                                 <div class="inner vertical-center">
                                     <div class="box-info">
                                         <div class="row mx-auto D-block">
-                                            <h2 class="heading-large"><a href="{% url 'project' random_post.title %}"
-                                                                         style="margin-top:-100px;font-family: 'Berkshire Swash', cursive;color:yellowgreen">{{ random_post.title }}</a>
+                                            <h2 class="heading-large"><a href="{% url 'project' post.title %}"
+                                            style="margin-top:-100px;font-family: 'Berkshire Swash', cursive;color:yellowgreen">{{ post.title }}</a>
                                             </h2>
                                         </div>
                                         <div class="row mx-auto D-block">
                                             <div class="by " style="color: white;">
-                                                by <strong><a href="" style="color: yellowgreen;">{{ random_post.user.username }}</a>
-                                            </strong> from <strong>{{ random_post.user.profile.company }}</strong>
+                                                by <strong><a href="" style="color: yellowgreen;">{{ post.user.username }}</a>
+                                            </strong> from <strong>{{ post.user.profile.company }}</strong>
                                             </div>
                                         </div>
                                         <div class="box-notesite js-notes">
@@ -117,7 +117,7 @@
                             <p class="card-text "><img src="{{post.user.profile.profile_picture.url}}"
                                                        class="nav-img mr-2"
                                                        alt="">
-                                By {{post.user.username|title}} from <strong>{{ random_post.user.profile.company }}</strong><br><span style="float:right">{{post.date|date}}</span>
+                                By {{post.user.username|title}} from <strong>{{ post.user.profile.company }}</strong><br><span style="float:right">{{post.date|date}}</span>
 
 
                             </p>
