--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -45,7 +45,7 @@
                     <div class="card" style="height: auto;width: auto;">
                         <div class="view overlay">
                             <div class="box-content over mi" style="background-color: black;" >
-                                <a href="{% url 'project' random_post.title %}" class="site-link" aria-label=""></a>
+                                <a href="{% url 'project' post.title %}" class="site-link" aria-label=""></a>
                                 <div class="inner vertical-center">
                                     <div class="box-info">
                                         <div class="row mx-auto D-block">
