--- a/projects/templates/results.html
+++ b/projects/templates/results.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container" style="margin-top:7%">
+<div class="container" style="margin-top:7%"><br>
     <div class="row">
         {% if results %}
         <h5>Found {{results.count}} projects</h5>
