--- a/projects/templates/navbar.html
+++ b/projects/templates/navbar.html
@@ -19,6 +19,7 @@
             </ul>
 
             <ul class="navbar-nav navbar-right">
+                <a class="nav-link" href="/" style="text-decoration: none;color: white;margin-top: 1%;">Home</a>
                 {% if user.is_authenticated%}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
