--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -43,10 +43,8 @@
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <div class="box-content over mi" style="background-color: black;" >
+                            <div class="over mi" style="background-color: black;" >
                                 <a href="{% url 'project' post.title %}" class="site-link" aria-label=""></a>
-                                <div class="inner vertical-center">
-                                    <div class="box-info">
                                         <div class="row mx-auto D-block">
                                             <h2 class="heading-large"><a href="{% url 'project' post.title %}"
                                             style="margin-top:-100px;font-family: 'Berkshire Swash', cursive;color:yellowgreen">{{ post.title }}</a>
@@ -58,7 +56,7 @@
                                             </strong> from <strong>{{ post.user.profile.company }}</strong>
                                             </div>
                                         </div>
-                                        <div class="box-notesite js-notes">
+                                        <div class="js-notes">
                                             <ul>
                                                 {% for rating in post.ratings.all %}
                                                 {% if forloop.counter is post.ratings.all.count %}
@@ -100,8 +98,6 @@
                                                 {% endfor %}
                                             </ul>
                                         </div>
-                                    </div>
-                                </div>
                             </div>
                             <img class="card-img-top" src="{{ post.photo.cdn_url }}"
                                  alt="{{photo.title}}">
