--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 
 {% block content %}
-<div class="container" style="margin-top:5%;"><br>
+<div class="container" style="margin-top:5%;"><br><br>
         <h2 class="mt-4 text-center" style="font-size: 30px;">Website projects</h2>
         {% if user.is_authenticated %}
         <div class="modal fade bd-example-modal-xl" id="ModalCenter" tabindex="-1" role="dialog"
@@ -42,7 +42,7 @@
                 {% for post in posts %}
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                            <div class="over" style="background-color: black;height: 200px;" >
+                            <div class="over" style="background-color: black;height: auto;" >
                                 <div class="row mx-auto D-block">
                                     <h2 class="heading-large"><a href="{% url 'project' post.title %}"
                                     style="margin-top:-100px;font-family: 'Berkshire Swash', cursive;color:yellowgreen">{{ post.title }}</a>
