--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -103,7 +103,7 @@
                             </a>
                         <div class="card-body">
                             <h4 class="card-title"><a href="{% url 'project' post.title %}">{{post.title|title}}</a> <a
-                                    class="btn btn-sm btn-outline-info" href="{{ post.url }}" style=""> View</a></h4>
+                                    class="btn btn-sm btn-outline-info" href="{{ post.url }}">Open Site</a> <a class="btn btn-sm btn-outline-info" href="{% url 'project' post.title %}">See more</a> </h4>
                             <hr>
                             <p class="card-text "><img src="{{post.user.profile.profile_picture.url}}"
                                                        class="nav-img mr-2"
