--- a/projects/templates/navbar.html
+++ b/projects/templates/navbar.html
@@ -42,8 +42,8 @@
                 <a href="{% url 'login' %}" class="login btn btn-sm btn-info"> REGISTER/LOGIN </a>
                 {% endif %}
                 {% if user.is_authenticated%}
-                <button class="btn btn-info btn-sm" id="site" data-toggle="modal" data-target=".bd-example-modal-xl">
-                    Submit your site
+                <button class="btn btn-outline-danger btn-sm" id="site" data-toggle="modal" data-target=".bd-example-modal-xl">
+                    Upload site
                 </button>
                 {% endif %}
             </ul>
