--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -82,7 +82,7 @@
                                                     <p class="d-block mx-auto textrate text-center">{{rating.content_average}}</p>
                                                 </div>
                                             </div>
-                                            <div class="legend" style="color: white;">CONTENT</div>
+                                            <div class="legend" style="color: white;">CREATIVITY</div>
                                         </li>
                                         <li class="circle-note-progress style-content" data-note="{{ rating.score }}">
                                             <div class="circle">
