--- a/projects/templates/navbar.html
+++ b/projects/templates/navbar.html
@@ -29,7 +29,7 @@
                                                                             alt="">
                     </a>
                     <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item text-center" href="{% url 'profile' user.username %}">Profile</a>
+                        <a class="dropdown-item text-center" href="{% url 'profile' user.id %}">Profile</a>
                         <hr>
                         <a class="dropdown-item text-center" href="{% url 'edit' user.username  %}"> Edit profile</a>
                         <hr>
