--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -50,7 +50,7 @@
                                 </div>
                                 <div class="row mx-auto D-block">
                                     <div class="by " style="color: white;">
-                                        by <strong><a href="" style="color: yellowgreen;">{{ post.user.username }}</a>
+                                        by <strong><a href="{% url 'profile' post.user.id %}" style="color: yellowgreen;">{{ post.user.username }}</a>
                                     </strong> from <strong>{{ post.user.profile.company }}</strong>
                                     </div>
                                 </div>
@@ -107,7 +107,7 @@
                             <p class="card-text "><img src="{{post.user.profile.profile_picture.url}}"
                                                        class="nav-img mr-2"
                                                        alt="">
-                                By {{post.user.username|title}} from <strong>{{ post.user.profile.company }}</strong><br><span style="float:right">{{post.date|date}}</span>
+                                By <strong><a href="{% url 'profile' post.user.id %}" style="color: yellowgreen;">{{ post.user.username }}</a> from <strong>{{ post.user.profile.company }}</strong><br><span style="float:right">{{post.date|date}}</span>
 
 
                             </p>
