update views and index

--- a/projects/templates/profile.html
+++ b/projects/templates/profile.html
@@ -41,6 +41,7 @@
 
 </div>
 <hr>
+<div class="container">
 <div class="row">
     {% if posts %}
 
@@ -125,5 +126,6 @@
         {% endfor %}
     </div>
     {% endif %}
+</div>
 </div>
 {% endblock %}
