update views and index

--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -50,7 +50,7 @@
                                 </div>
                                 <div class="row mx-auto D-block">
                                     <div class="by " style="color: white;">
-                                        by <strong><a href="{% url 'profile' post.user.id %}" style="color: yellowgreen;">{{ post.user.username }}</a>
+                                        by <strong><a href="{% url 'userprofile' post.user.username %}" style="color: yellowgreen;">{{ post.user.username }}</a>
                                     </strong> from <strong>{{ post.user.profile.company }}</strong>
                                     </div>
                                 </div>
