--- a/projects/templates/profile.html
+++ b/projects/templates/profile.html
@@ -42,6 +42,7 @@
 </div>
 <hr>
 <div class="container">
+    <div class="text-center" style="font-size: 30px;">{{count}} Project(s)</div>
 <div class="row">
     {% if posts %}
 
