--- a/projects/templates/userprofile.html
+++ b/projects/templates/userprofile.html
@@ -27,84 +27,108 @@
     </div>
     <img class="rounded-circle account-img content-center" src="{{ user_prof.profile.profile_picture.url }}">
     <p class="text-center">{{user_prof.username}}</p>
+    <p class="text-center" style="color: yellowgreen;"><strong>{{user_prof.profile.bio}}</strong></p>
     <p class="text-center"> {{user_prof.email}}</p>
 </div>
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6 mt-4">
+        <div class="card" style="border-radius: 70%;">
+        <img class="rounded-circle account-img d-block mx-auto" style="margin-top: 3%;" src="{{ user.profile.profile_picture.url }}">
+        <p class="text-center mt-3" style="font-size: 20px;">{{user.username}}</p>
+        <p class="text-center" style="color: yellowgreen;"><strong>{{user.profile.bio}}</strong></p>
+        <p class="text-center"> {{user_prof.email}}</p>
+        </div>
+    </div>
+    <div class="col-md-3"></div>
+</div>
 <hr>
-    {% for post in posts %}
-    <div class="col-md-4 mb-4">
-        <div class="card" >
-                <div class="over" style="background-color: black;height: auto;" >
-                    <div class="row mx-auto D-block">
-                        <h2 class="heading-large"><a href="{% url 'project' post.title %}"
-                        style="margin-top:-100px;font-family: 'Berkshire Swash', cursive;color:yellowgreen">{{ post.title }}</a>
-                        </h2>
-                    </div>
-                    <div class="row mx-auto D-block">
-                        <div class="by " style="color: white;">
-                            by <strong><a href="" style="color: yellowgreen;">{{ post.user.username }}</a>
-                        </strong> from <strong>{{ post.user.profile.company }}</strong>
+<div class="container">
+    <div class="text-center" style="font-size: 30px;">{{count}} Project(s)</div>
+<div class="row">
+    {% if posts %}
+
+    <div class="templates display">
+        {% for post in posts %}
+        <div class="col-md-4 mb-4">
+            <div class="card" >
+                    <div class="over" style="background-color: black;height: auto;" >
+                        <div class="row mx-auto D-block">
+                            <h2 class="heading-large"><a href="{% url 'project' post.title %}"
+                            style="margin-top:-100px;font-family: 'Berkshire Swash', cursive;color:yellowgreen">{{ post.title }}</a>
+                            </h2>
+                        </div>
+                        <div class="row mx-auto D-block">
+                            <div class="by " style="color: white;">
+                                by <strong><a href="{% url 'profile' post.user.id %}" style="color: yellowgreen;">{{ post.user.username }}</a>
+                            </strong> from <strong>{{ post.user.profile.company }}</strong>
+                            </div>
+                        </div>
+                        <div class="js-notes">
+                            <ul>
+                                {% for rating in post.ratings.all %}
+                                {% if forloop.counter is post.ratings.all.count %}
+                                <li class="circle-note-progress style-design" data-note="">
+                                    <div class="circle">
+                                        <div class="des">
+                                            <p class="d-block mx-auto textrate text-center">{{rating.design_average}}</p>
+                                        </div>
+                                    </div>
+                                    <div class="legend" style="color: white;">DESIGN</div>
+                                </li>
+                                <li class="circle-note-progress style-usability"
+                                    data-note="{{rating.usability_average}}">
+                                    <div class="circle">
+                                        <div class="des1">
+                                            <p class="d-block mx-auto textrate text-center">{{rating.usability_average}}</p>
+                                        </div>
+                                    </div>
+                                    <div class="legend" style="color: white;">USABILITY</div>
+                                </li>
+                                <li class="circle-note-progress style-creativity"
+                                    data-note="{{rating.content_average}}">
+                                    <div class="circle">
+                                            <div class="des2">
+                                            <p class="d-block mx-auto textrate text-center">{{rating.content_average}}</p>
+                                        </div>
+                                    </div>
+                                    <div class="legend" style="color: white;">CREATIVITY</div>
+                                </li>
+                                <li class="circle-note-progress style-content" data-note="{{ rating.score }}">
+                                    <div class="circle">
+                                            <div class="des3">
+                                            <p class="d-block mx-auto textrate text-center">{{rating.score}}</p>
+                                        </div>
+                                    </div>
+                                    <div class="legend" style="color: white;">SCORE</div>
+                                </li>
+                                {% endif %}
+                                {% endfor %}
+                            </ul>
                         </div>
                     </div>
-                    <div class="js-notes">
-                        <ul>
-                            {% for rating in post.ratings.all %}
-                            {% if forloop.counter is post.ratings.all.count %}
-                            <li class="circle-note-progress style-design" data-note="">
-                                <div class="circle">
-                                    <div class="des">
-                                        <p class="d-block mx-auto textrate text-center">{{rating.design_average}}</p>
-                                    </div>
-                                </div>
-                                <div class="legend" style="color: white;">DESIGN</div>
-                            </li>
-                            <li class="circle-note-progress style-usability"
-                                data-note="{{rating.usability_average}}">
-                                <div class="circle">
-                                    <div class="des1">
-                                        <p class="d-block mx-auto textrate text-center">{{rating.usability_average}}</p>
-                                    </div>
-                                </div>
-                                <div class="legend" style="color: white;">USABILITY</div>
-                            </li>
-                            <li class="circle-note-progress style-creativity"
-                                data-note="{{rating.content_average}}">
-                                <div class="circle">
-                                        <div class="des2">
-                                        <p class="d-block mx-auto textrate text-center">{{rating.content_average}}</p>
-                                    </div>
-                                </div>
-                                <div class="legend" style="color: white;">CREATIVITY</div>
-                            </li>
-                            <li class="circle-note-progress style-content" data-note="{{ rating.score }}">
-                                <div class="circle">
-                                        <div class="des3">
-                                        <p class="d-block mx-auto textrate text-center">{{rating.score}}</p>
-                                    </div>
-                                </div>
-                                <div class="legend" style="color: white;">SCORE</div>
-                            </li>
-                            {% endif %}
-                            {% endfor %}
-                        </ul>
-                    </div>
+                    <a href="{% url 'project' post.title %}">
+                    <img class="card-img-top" src="{{ post.photo.cdn_url }}"
+                         alt="{{photo.title}}" style="height: 300px;">
+                    </a>
+                <div class="card-body" style="height: 200px;">
+                    <h4 class="card-title"><a class="btn btn-sm btn-outline-info" href="{{ post.url }}">Open Site</a><a class="btn btn-sm btn-outline-info" href="{% url 'project' post.title %}">See more</a> </h4>
+                    <hr>
+                    <p class="card-text "><img src="{{post.user.profile.profile_picture.url}}"
+                                               class="nav-img mr-2"
+                                               alt="">
+                                                    by <strong><a href="{% url 'profile' post.user.id %}" style="color: yellowgreen;">{{ post.user.username }}</a>
+                                                </strong> from <strong>{{ post.user.profile.company }}</strong><br><span style="float:right">{{post.date|date}}</span>
+
+
+                    </p>
                 </div>
-                <a href="{% url 'project' post.title %}">
-                <img class="card-img-top" src="{{ post.photo.cdn_url }}"
-                        alt="{{photo.title}}" style="height: 300px;">
-                </a>
-            <div class="card-body" style="height: 200px;">
-                <h4 class="card-title"><a class="btn btn-sm btn-outline-info" href="{{ post.url }}">Open Site</a><a class="btn btn-sm btn-outline-info" href="{% url 'project' post.title %}">See more</a> </h4>
-                <hr>
-                <p class="card-text "><img src="{{post.user.profile.profile_picture.url}}"
-                                            class="nav-img mr-2"
-                                            alt="">
-                    By {{post.user.username|title}} from <strong>{{ post.user.profile.company }}</strong><br><span style="float:right">{{post.date|date}}</span>
-
-
-                </p>
             </div>
+            
         </div>
-        
+        {% endfor %}
     </div>
-    {% endfor %}
+    {% endif %}
+</div>
+</div>
 {% endblock %}
