--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -107,7 +107,7 @@
                             <p class="card-text "><img src="{{post.user.profile.profile_picture.url}}"
                                                        class="nav-img mr-2"
                                                        alt="">
-                                                            by <strong><a href="{% url 'profile' post.user.id %}" style="color: yellowgreen;">{{ post.user.username }}</a>
+                                                            by <strong><a href="{% url 'userprofile' post.user.username %}" style="color: yellowgreen;">{{ post.user.username }}</a>
                                                         </strong> from <strong>{{ post.user.profile.company }}</strong><br><span style="float:right">{{post.date|date}}</span>
 
 
