--- a/projects/templates/profile.html
+++ b/projects/templates/profile.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="row mx-auto D-block">
                             <div class="by " style="color: white;">
-                                by <strong><a href="{% url 'profile' post.user.id %}" style="color: yellowgreen;">{{ post.user.username }}</a>
+                                by <strong><a href="{% url 'userprofile' post.user.username %}" style="color: yellowgreen;">{{ post.user.username }}</a>
                             </strong> from <strong>{{ post.user.profile.company }}</strong>
                             </div>
                         </div>
@@ -115,7 +115,7 @@
                     <p class="card-text "><img src="{{post.user.profile.profile_picture.url}}"
                                                class="nav-img mr-2"
                                                alt="">
-                                                    by <strong><a href="{% url 'profile' post.user.id %}" style="color: yellowgreen;">{{ post.user.username }}</a>
+                                                    by <strong><a href="{% url 'userprofile' post.user.username %}" style="color: yellowgreen;">{{ post.user.username }}</a>
                                                 </strong> from <strong>{{ post.user.profile.company }}</strong><br><span style="float:right">{{post.date|date}}</span>
 
 
